--- a/projets/tic-tac-toe/index.html
+++ b/projets/tic-tac-toe/index.html
@@ -12,9 +12,10 @@
       <h1>404 error</h1>
       <div class="titre">
         <h2>tic tac toe</h2>
-        <p>une case piégée</p>
+        <p>une case est piégée</p>
       </div>
     <div class="board" id="board"></div>
+
     <div class="status" id="status">Joueur X commence</div>
     <button class="reset" id="reset">Rejouer</button>
     </div>
