--- a/projets/tic-tac-toe/index.html
+++ b/projets/tic-tac-toe/index.html
@@ -3,23 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <title>Jeu du Morpion</title>
-        <link rel="stylesheet" href="https://use.typekit.net/elr7kuq.css" />
+    <link rel="stylesheet" href="https://use.typekit.net/elr7kuq.css" />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div class="main">
-        <div class="header">
-      <h1>404 error</h1>
-      <div class="titre">
-        <h2>tic tac toe</h2>
-        <p>une case est piégée</p>
-      </div>
-    <div class="board" id="board"></div>
-
-    <div class="status" id="status">Joueur X commence</div>
-    <button class="reset" id="reset">Rejouer</button>
+      <div class="header">
+        <h1>404 error</h1>
+        <div class="titre">
+          <h2>tic tac toe</h2>
+          <p>une case est piégée</p>
+        </div>
+        <div class="board" id="board"></div>
+        <div class="ensemble">
+        <div class="status" id="status">Joueur X commence</div>
+        <div class="img"><img src="perdu.png" alt="éléphant" /></div>
+        </div>
+      
+      <button class="reset" id="reset">Rejouer</button>
     </div>
-
     <script src="script.js"></script>
   </body>
 </html>
